--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-jss": "^10.9.2",
+    "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "react-simple-keyboard": "^3.4.199",
     "react-toastify": "^9.0.8",
